# olympicHistory

./: .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  olympic_enias_insomnia.json  pyproject.toml  requirements.txt
athletes/: models.py  serializers.py  urls.py  views.py
athletes/management/commands/: seed_athletes.py  seed_countries.py
athletes/migrations/: 0001_initial.py  0002_auto_20210930_1803.py  0003_athlete_events.py  0004_auto_20211005_0433.py  0005_auto_20211005_0434.py  0006_auto_20211005_1739.py
envs/: dev.env
games/: models.py  serializers.py  urls.py  views.py
games/migrations/: 0001_initial.py  0002_rename_events_game_competitions.py  0003_auto_20211001_1839.py  0004_auto_20211005_0314.py  0005_alter_game_year.py  0006_auto_20211005_1739.py
medals/: models.py  serializers.py  urls.py  views.py
medals/migrations/: 0001_initial.py  0002_rename_athlete_medal_athletes.py  0003_medal_medals_meda_medal_c_7915ac_idx.py
olympicHistory/: asgi.py  settings.py  urls.py  wsgi.py
